Messing pretty much everything up in the short run.
I'm currently reworking and documenting literally everything within substd. As I finish indivdual items I'm moving them from _old to the regular dirs. There are some random testing files around and cmake files are completely broken at the moment. Hopefully this won't take too long for me but I've been putting off fixing everything for awhile now.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,5 @@
 cmake_minimum_required(VERSION 3.10.2)
 
-add_library(substd STATIC 
-    ${CMAKE_CURRENT_SOURCE_DIR}/dool.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/transform.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/tree.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/cellmap.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/readfile.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/util.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/itransformable.cpp
-)
+add_library(substd STATIC)
 
 target_include_directories(substd PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../include")
